// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFromHtml#parse renders <input/> with defaultValue 1`] = `
<input
  defaultValue="foo"
  disabled={true}
  size={10}
  type="text"
/>
`;

exports[`ReactFromHtml#parse renders <script/> with dangerouslySetInnerHTML 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "console.log('Hello <strong>React</strong> world!');",
    }
  }
/>
`;

exports[`ReactFromHtml#parse renders <style/> with dangerouslySetInnerHTML 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "/* Hello <strong>React</strong> world! */",
    }
  }
/>
`;

exports[`ReactFromHtml#parse renders <textarea/> with defaultValue, instead of children 1`] = `
<textarea
  defaultValue="/* Hello <strong>React</strong> world! */"
/>
`;

exports[`ReactFromHtml#parse renders elements with the style attribute 1`] = `
<label
  style={
    Object {
      "color": "red",
      "fontSize": "20px",
      "fontWeight": "normal",
      "opacity": 0.5,
      "zIndex": 99,
    }
  }
>
  Hello, world!
</label>
`;

exports[`ReactFromHtml#parse renders for as htmlFor 1`] = `
<label
  htmlFor="foo"
>
  <input
    id="foo"
  />
</label>
`;

exports[`ReactFromHtml#parse renders multiple blocks of HTML elements correctly 1`] = `
Array [
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
        ",
]
`;

exports[`ReactFromHtml#parse renders single block of HTML elements correctly 1`] = `
<p
  className="hello"
>
  Hello, 
  <strong>
    React
  </strong>
   world!
</p>
`;
